ahora el index.html tiene codigo html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p>
-      MI PRIMER PROYECTO COMO NOOB 
+      MI PRIMER PROYECTO COMO NOOB jaja
     </p>
   </body>
 </html>
